test/tests/operators/taste/error_zero.txt
error: `limit` must not be zero
 --> tests/operators/taste/error_zero.tql:6:7
  |
6 | taste 0
  |       ^ 
  |
